# hcalc

./: .exrc  .gitignore  README.md  hcalc.cabal  stack.yaml  test.sh  test_build.sh  test_ghci.sh  test_run.sh
exec/: Main.hs
scripts/: ExprToString.hs  GenerateLikelyFactors.hs
src/: AST.hs  Alias.hs  Error.hs  Eval.hs  FlexNum.hs  FnPredef.hs  FnStore.hs  Main.hs  Parse.hs  Predef.hs  Runtime.hs  Session.hs  Validate.hs  Validation.hs
test/: TestData.hs  TestEval.hs  TestGen.hs  TestMain.hs  TestParse.hs  TestProps.hs  TestValidate.hs  TestValidation.hs
test/Test/Util/: Data.hs  Gen.hs  GenEval.hs  GenParse.hs  GenUnparse.hs
