name:                hcalc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/EarthCitizen/hcalc
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=2.0
extra-source-files:  README.md

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -fwarn-unused-imports
    default-extensions:  GeneralizedNewtypeDeriving
                       , FlexibleContexts
                       , StandaloneDeriving
                       , OverloadedStrings
                       , ViewPatterns
    exposed-modules:     Alias
                       , AST
                       , Error
                       , Eval
                       , Predef
                       , FnStore
                       , Parse
                       , Runtime
                       , Session
                       , Validate
    build-depends:       base == 4.12.0.0
                       , mtl == 2.2.2
                       , megaparsec == 6.5.0
                       , text == 1.2.3.1
                       , parser-combinators == 0.4.0
                       , haskeline == 0.7.5.0
                       , transformers == 0.5.6.2
                       , extra == 1.6.13
                       , containers == 0.5.11.0
                       , decimal-arithmetic == 0.5.1.0

executable hcalc
    hs-source-dirs:      exec
    main-is:             Main.hs
    default-language:    Haskell2010
    ghc-options:         -O2 -fwarn-unused-imports
    default-extensions:  GeneralizedNewtypeDeriving
                       , FlexibleContexts
                       , StandaloneDeriving
                       , OverloadedStrings
    build-depends:       base >= 4.7 && < 5
                       , hcalc

test-suite hcalc-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             TestMain.hs
    default-language:    Haskell2010
    ghc-options:         -O2 -rtsopts -with-rtsopts=-N
    default-extensions:  GeneralizedNewtypeDeriving
                       , FlexibleContexts
                       , PatternSynonyms
                       , OverloadedStrings
                       , ViewPatterns
    other-modules:       Test.Util.GenEval
                       , Test.Util.GenParse
                       , Test.Util.GenUnparse
                       , Test.Util.Data
                       , TestEval
                       , TestParse
                       , TestValidate
    build-depends:       base
                       , containers
                       , extra
                       , hedgehog == 0.6.1
                       , hspec == 2.6.1
                       , ieee754 == 0.8.0
                       , mtl
                       , monadlist == 0.0.2
                       , transformers
                       , scientific == 0.3.6.2
                       , tasty == 1.2
                       , tasty-hedgehog == 0.2.0.0
                       , tasty-discover == 4.2.1
                       , tasty-hspec == 1.1.5.1
                       , tasty-hunit == 0.10.0.1
                       , HUnit == 1.6.0.0
                       , hcalc
